doc-analyzer/model-experiment/kubernetes/classifier-inference/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: br2-classifier-inference
spec:
  rules:
  - host: doc-classifier.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: br2-classifier-inference
            port:
              number: 80
